--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,10 +3,11 @@
     <h1>{{group.name}}</h1>
     <p>{{group.comment}}</p>
     <div class="span3" ng-repeat="color in group.colors">
-      <div class="thumbnail" style="background-color: {{color.color}}; width:100px; height:100px;"></div>
+      <div class="thumbnail" style="background-color: {{color.color}}; height:100px;"></div>
       <ul class="no-bullet">
-        <li>{{color.name}}</li>
-        <li>{{color.color}}</li>
+        <li>Color Name: @{{color.name}}</li>
+        <li>Color: {{color.color}}</li>
+        <li ng-show="color.link">Color Link: @{{color.link}}</li>
       </ul>
     </div>
   </div>
