--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="row-fluid" ng-repeat="group in colors">
+  <div class="row-fluid thumbnails" ng-repeat="group in colors">
     <h1>{{group.name}}</h1>
     <p>{{group.comment}}</p>
     <div class="span3" ng-repeat="color in group.colors">
-      <div class="thumbnail" style="background-color: {{color.color}}; height:100px;"></div>
+      <div class="thumbnail" style="background-color: {{color.color}}; height:100px"></div>
       <ul class="no-bullet">
         <li>Color Name: @{{color.name}}</li>
         <li>Color: {{color.color}}</li>
@@ -11,4 +11,26 @@
       </ul>
     </div>
   </div>
+
+  <div class="row-fluid">
+    <h1>Checkbox Fun</h1>
+
+    <label class="checkbox">
+      <input class="checkbox" type="checkbox" ng-model="a">
+      I am A: {{a}}
+    </label>
+    <label class="checkbox">
+      <input type="checkbox" ng-model="b">
+      I am B: {{b}}
+    </label>
+  </div>
+</div>
+
+<div class="well" style="position:fixed; top:0; right:5%;">
+  <h1>Compare Colors</h1>
+  <div class="thumbnail" style="background-color: {{manualStyle}}; height:100px;"></div>
+  <label for="manualStyle">
+    Enter a Color:
+    <input type="text" ng-model="manualStyle" name="manualStyle">
+  </label>
 </div>
