Updating the less file a bit.

--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -1,4 +1,5 @@
 // Global values
+// main variables for the site
 // --------------------------------------------------
 @primary:                   #36434c;
 @secondary:                 #edf7ff;
@@ -6,7 +7,6 @@
 @base-color :               @primary;
 @heading-color:             #36434d;
 @secondary-heading-color:   #0088cc;
-
 
 // Grays
 // --------------------------------------------------
@@ -18,13 +18,11 @@
 // --------------------------------------------------
 @white:                     #ffffff;
 
-
 // Scaffolding
 // --------------------------------------------------
 @bodyBackground:            @white;
 @textColor:                 @grayDark;
 @footer:                    #004573;
-
 
 // Links
 // --------------------------------------------------
@@ -39,14 +37,10 @@
 @kicker-action-respond:     #005580;
 @link_footer:               #b2e5ff;
 
-
 // Typography
 // --------------------------------------------------
-//@baseLineHeight: 12px;
 @baseFontSize:          16px;
 @baseLineHeight:        24px;
-
-
 
 // Forms
 // --------------------------------------------------
