the variables are now inside the .

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,7 +7,7 @@
       <ul class="no-bullet">
         <li>Color Name: {{color.name}}</li>
         <li>Color: {{color.color}}</li>
-        <li ng-show="color.link">Color Link: @{{color.link}}</li>
+        <li ng-show="color.link">Color Link: {{color.link}}</li>
       </ul>
     </div>
   </div>
