--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,16 +1,18 @@
 <div class="container">
-  <div class="row-fluid thumbnails" ng-repeat="group in elements">
-    <h1>{{group.name}}</h1>
-    <p>{{group.comment}}</p>
-    <div class="span3" ng-repeat="color in group.colors">
-      <div class="thumbnail" style="background-color: {{color.color}}; height:100px"></div>
-      <ul class="no-bullet">
-        <li>Color Name: {{color.name}}</li>
-        <li>Color: {{color.color}}</li>
-        <li ng-show="color.link">Color Link: {{color.link}}</li>
-      </ul>
+    <div class="row-fluid" ng-repeat="group in elements">
+      <h1>{{group.name}}</h1>
+      <p>{{group.comment}}</p>
+      <div class="row-fluid">
+        <div class="span3" ng-repeat="color in group.colors">
+          <div class="thumbnail" style="background-color: {{color.color}}; height:100px"></div>
+          <ul class="no-bullet">
+            <li>Color Name: {{color.name}}</li>
+            <li>Color: {{color.color}}</li>
+            <li ng-show="color.link">Color Link: {{color.link}}</li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </div>
 
   <div class="row-fluid">
     <h1>Checkbox Fun</h1>
@@ -26,7 +28,7 @@
   </div>
 </div>
 
-<div class="well" style="position:fixed; top:0; right:5%;">
+<div class="well" draggable style="position:fixed; top:0; right:5%;">
   <h1>Compare Colors</h1>
   <div class="thumbnail" style="background-color: {{manualStyle}}; height:100px;"></div>
   <label for="manualStyle">
