--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,15 +11,26 @@
     <div class="row-fluid" ng-repeat="group in elements">
       <h2>{{group.name}}</h2>
       <p>{{group.comment}}</p>
-      <div class="row-fluid">
+      <div class="row-fluid" ng-show="group.colors">
+        <h3>Colors</h3>
         <div class="span3 color-thumbnail" ng-repeat="color in group.colors">
           <div class="thumbnail" style="background-color: {{color.color}}; height:100px"></div>
-          <ul class="no-bullet">
+          <ul class="unstyled">
             <li><b>Color Name</b>: {{color.name}}</li>
             <li><b>Color</b>: {{color.color}}</li>
             <li ng-show="color.link"><b>Color Link</b>: {{color.link}}</li>
           </ul>
         </div>
+      </div>
+
+      <div class="row-fluid" ng-show="group.sizes">
+        <h3>Sizes</h3>
+        <dl class="dl-horizontal">
+          <span ng-repeat="size in group.sizes">
+            <dt>{{size.type}}</dt>
+            <dd><code>{{size.style}}: {{size.value}};</code></dd>
+          </span>
+        </ul>
       </div>
     </div>
 
