tweaking the variables doc and removing some extra styling.

--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -8,6 +8,11 @@
 @heading-color:             #36434d;
 @secondary-heading-color:   #0088cc;
 
+// Typography
+// --------------------------------------------------
+@baseFontSize:          16px; // font-size
+@baseLineHeight:        24px; // line-height
+
 // Grays
 // --------------------------------------------------
 @chronGrayLight:                #f7f5f2;
@@ -36,11 +41,6 @@
 @kicker-action:             #ff6f20;
 @kicker-action-respond:     #005580;
 @link_footer:               #b2e5ff;
-
-// Typography
-// --------------------------------------------------
-@baseFontSize:          16px;
-@baseLineHeight:        24px;
 
 // Forms
 // --------------------------------------------------
