adding color.comment to show any comments about a color.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,6 +19,7 @@
             <li><b>Color Name</b>: {{color.name}}</li>
             <li><b>Color</b>: {{color.color}}</li>
             <li ng-show="color.link"><b>Color Link</b>: {{color.link}}</li>
+            <li ng-show="color.comment"><b>Comment</b>: {{color.comment}}</li>
           </ul>
         </div>
       </div>
