Second comment added.

--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -1,5 +1,6 @@
 // Global values
 // main variables for the site
+// extra comment
 // --------------------------------------------------
 @primary:                   #36434c;
 @secondary:                 #edf7ff;
