Changing line height to be %

--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -12,7 +12,7 @@
 // Typography
 // --------------------------------------------------
 @baseFontSize:          16px; // font-size
-@baseLineHeight:        24px; // line-height
+@baseLineHeight:        1.5; // line-height
 
 // Grays
 // --------------------------------------------------
