--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,26 +1,15 @@
 body {
-    background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
+  background: #fafafa;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #333;
 }
 
-.hero-unit {
-    margin: 50px auto 0 auto;
-    width: 300px;
-    font-size: 18px;
-    font-weight: 200;
-    line-height: 30px;
-    background-color: #eee;
-    border-radius: 6px;
-    padding: 60px;
+.btn {
+  transition-property: background-color;
+  transition-duration: 1s;
 }
 
-.hero-unit h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-}
-
-.color-thumbnail {
-    min-height: 180px;
+.btn:hover {
+  transition-property: background-color;
+  transition-duration: 1s;  
 }
