--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -1,11 +1,11 @@
 // Global values
+// --------------------------------------------------
 // main variables for the site
 // extra comment
-// --------------------------------------------------
 @primary:                   #36434c;
 @secondary:                 #edf7ff;
 @tertiary:                  #B6CBD9;
-@base-color :               @primary;
+@base-color:               @primary;
 @heading-color:             #36434d;
 @secondary-heading-color:   #0088cc;
 
@@ -16,6 +16,8 @@
 
 // Grays
 // --------------------------------------------------
+// more comment
+// tests
 @chronGrayLight:                #f7f5f2;
 @chronGray:                     #e6e4e1;
 @chronGrayDark:                 #3a3a3a;
