--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,11 +12,19 @@
 
   <h1>{{active.name}}</h1>
   <div class="" ng-repeat="group in elements">
-    <h2>{{group.name}}</h2>
-    <p>{{group.comment}}</p>
-    <div class="row" ng-show="group.colors">
-      <h3>Colors</h3>
-      <div class="col-lg-3" ng-repeat="color in group.colors">
+    <h2>{{group.section}}</h2>
+    <ul class="list-unstyled">
+      <li ng-repeat="comment in group.comments">{{comment}}</li>
+    </ul>
+    <div class="row" ng-show="group.variables">
+      <h3>Variables</h3>
+      <ul class="list-unstyled col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="variable in group.variables">
+        <li><h4>{{variable.name}} ({{variable.valueType}})</h4></li>
+        <li>Value: {{variable.value}}</li>
+        <li ng-show="variable.link">Linked Variable: {{variable.link}}</li>
+        <li>Comment: {{variable.comment}}</li>
+      </ul>
+      <!-- <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6" ng-repeat="color in group.colors">
         <div class="thumbnail" style="background-color: {{color.color}}; height:100px"></div>
         <ul class="unstyled">
           <li><b>Color Name</b>: {{color.name}}</li>
@@ -24,10 +32,10 @@
           <li ng-show="color.link"><b>Color Link</b>: {{color.link}}</li>
           <li ng-show="color.comment"><b>Comment</b>: {{color.comment}}</li>
         </ul>
-      </div>
+      </div> -->
     </div>
 
-    <div class="row" ng-show="group.sizes">
+    <!-- <div class="row" ng-show="group.sizes">
       <h3>Sizes</h3>
       <dl class="dl-horizontal">
         <span ng-repeat="size in group.sizes">
@@ -36,7 +44,7 @@
         </span>
       </dl>
       <p class="{{group.name | lowercase}}-sample panel ">Sample Stuff</p>
-    </div>
+    </div> -->
   </div>
 </div>
 
