--- a/app/styles/colors-che.less
+++ b/app/styles/colors-che.less
@@ -1,4 +1,5 @@
 //Themes dir for images and css
+// --------------------------------------------------
 @themes-dir: "/themes/che";
 // Global values
 // --------------------------------------------------
