--- a/app/styles/colors-cop.less
+++ b/app/styles/colors-cop.less
@@ -1,4 +1,5 @@
 //Themes dir for images and css
+// --------------------------------------------------
 @themes-dir: "/themes/cop";
 // Global values
 // --------------------------------------------------
