Changes to the main view.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -23,7 +23,7 @@
         <h4>{{variable.name}} ({{variable.valueType}})</h4>
         <ul class="list-unstyled">
           <li>Value: {{variable.value}}</li>
-          <li ng-show="variable.link">Linked Variable: {{variable.link}}</li>
+          <li>Raw Value: {{variable.rawValue}}</li>
           <li>Comment: {{variable.comment}}</li>
         </ul>
       </div>
